Commiting radar chart changes and rating star layout